--- a/docs/public/css/lanyon.css
+++ b/docs/public/css/lanyon.css
@@ -41,7 +41,7 @@ body {
 }
 
 html {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
