--- a/docs/public/css/lanyon.css
+++ b/docs/public/css/lanyon.css
@@ -41,11 +41,11 @@ body {
 }
 
 html {
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: "SF Pro", Helvetica, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  font-family: "SF Pro", Helvetica, Arial, sans-serif;
   font-weight: 400;
   color: #313131;
   letter-spacing: -.025rem;
