--- a/docs/public/css/fonts.css
+++ b/docs/public/css/fonts.css
@@ -4,3 +4,10 @@
     font-weight: 400;
     src: url('/public/fonts/SF-Pro.ttf') format('truetype')
 }
+
+@font-face {
+    font-family: 'SF Pro';
+    font-style: italic;
+    font-weight: 400;
+    src: url('/public/fonts/SF-Pro-Italic.ttf') format('truetype')
+}
