--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -16,10 +16,10 @@
   <link rel="canonical" href="{{ page.url | absolute_url }}">
   {% endif %}
 
-  <link rel="stylesheet" href="{{ '/public/css/poole.css' | absolute_url }}">
-  <link rel="stylesheet" href="{{ '/public/css/syntax.css' | absolute_url }}">
-  <link rel="stylesheet" href="{{ '/public/css/lanyon.css' | absolute_url }}">
-  <link rel="stylesheet" href="{{ '/public/css/fonts.css' | absolute_url }}">
+  <link rel="stylesheet" href="{{ 'public/css/poole.css' | absolute_url }}">
+  <link rel="stylesheet" href="{{ 'public/css/syntax.css' | absolute_url }}">
+  <link rel="stylesheet" href="{{ 'public/css/lanyon.css' | absolute_url }}">
+  <link rel="stylesheet" href="{{ 'public/css/fonts.css' | absolute_url }}">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet">
 
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ '/public/apple-touch-icon-precomposed.png' | absolute_url }}">
