--- a/docs/public/css/fonts.css
+++ b/docs/public/css/fonts.css
@@ -2,12 +2,12 @@
     font-family: 'SF Pro';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/SF-Pro.ttf') format('truetype')
+    src: url('fonts/SF-Pro.ttf') format('truetype')
 }
 
 @font-face {
     font-family: 'SF Pro';
     font-style: italic;
     font-weight: 400;
-    src: url('../fonts/SF-Pro-Italic.ttf') format('truetype')
+    src: url('fonts/SF-Pro-Italic.ttf') format('truetype')
 }
