--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,9 +2,10 @@
 <html lang="en-us">
 
   {% include head.html %}
-
+<!--
+  <body class="sidebar-overlay">
+-->
   <body>
-
     {% include sidebar.html %}
 
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
