--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,8 +13,9 @@
     <div class="wrap">
       <div class="masthead">
         <div class="container">
+
           <h3 class="masthead-title">
-            <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+            <a href="{{ site.baseurl }}/" title="home"><img class="masthead-img" src="{{ site.masthead }}"alt = "{{ site.title | escape}}"/>{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
           </h3>
         </div>
