--- a/docs/public/css/lanyon.css
+++ b/docs/public/css/lanyon.css
@@ -100,7 +100,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 30px;
   padding-top: 0;
   padding-bottom: 0;
-  float: left;
+  float: right;
 }
 
 .inline-img {
