--- a/docs/public/css/lanyon.css
+++ b/docs/public/css/lanyon.css
@@ -94,10 +94,12 @@ h1, h2, h3, h4, h5, h6 {
  */
 
  .masthead-img {
-  display: block;
+  display: inline-block;
   margin-left: 0;
   margin-right: 8px;
-  width: 30px;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  height: 19px;
   padding-top: 0;
   padding-bottom: 0;
 }
