social media icons

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -38,8 +38,21 @@
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
-    <a href="https://www.linkedin.com/in/kevinsunchen/" target="_blank">
-      <img src="/public/linkedin.ico" alt="linkedin icon" width="30">
-    </a>
+    <div class="sidebar-socialmedia">
+      <a href="https://www.linkedin.com/in/kevinsunchen/" target="_blank">
+        <img class="sidebar-icons" src="/public/linkedin.ico" alt="linkedin icon">
+      </a>
+    </div>
+
+    <div class="sidebar-socialmedia">
+      <a href="https://twitter.com/kechens_" target="_blank">
+        <img class="sidebar-icons" src="/public/twitter.ico" alt="twitter icon">
+      </a>      
+    </div>
+    <div class="sidebar-socialmedia">
+      <a href="https://www.instagram.com/kevinsunchen/" target="_blank">
+        <img class="sidebar-icons" src="/public/instagram.ico" alt="instagram icon">
+      </a>
+    </div>
   </div>
 </div>
