--- a/docs/public/css/lanyon.css
+++ b/docs/public/css/lanyon.css
@@ -194,6 +194,18 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0;
 }
 
+.sidebar-socialmedia {
+  display: inline-block;
+  margin-right: 6px;
+}
+
+.sidebar-icons {
+  display: inline-block;
+  width: 30px;
+  margin: 0%;
+  padding: 0%;
+}
+
 /* Sidebar nav */
 .sidebar-nav {
   border-bottom: 1px solid rgba(255,255,255,.1);
