--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="sidebar-socialmedia">
-      <a href="https://twitter.com/kechens_" target="_blank">
+      <a href="https://twitter.com/kevinsunchen" target="_blank">
         <img class="sidebar-icons" src="/public/twitter.ico" alt="twitter icon">
       </a>      
     </div>
