--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="{{ 'public/css/syntax.css' | absolute_url }}">
   <link rel="stylesheet" href="{{ 'public/css/lanyon.css' | absolute_url }}">
   <link rel="stylesheet" href="{{ 'public/css/fonts.css' | absolute_url }}">
+  <link rel="stylesheet" href="{{ 'public/css/customclasses.css' | absolute_url }}">
 
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ '/public/apple-touch-icon-precomposed.png' | absolute_url }}">
   <link rel="shortcut icon" href="{{ '/public/favicon.ico' | absolute_url }}">
